# TrainmarchTicketBot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: close.rs  close_homebrew.rs  create_ticket_embeds.rs  mod.rs  open.rs
src/commands/open/embeds/: dm.rs  homebrew.rs  lore.rs  mod.rs  respec.rs  sheetcheck.rs  shopkeep.rs  staff.rs
src/commands/tickets/: character.rs  dm.rs  hb_feat.rs  hb_item.rs  hb_other.rs  hb_spell.rs  hb_subclass.rs  homebrew.rs  lore.rs  mod.rs  respec.rs  sheetcheck.rs  shopkeep.rs  staff.rs
