[package]
name = "ticket-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
extend = "1.2.0"
lazy_static = "1.4.0"
protoc = "2.28.0"
rand = "0.8.5"
regex = "1.7.3"
serenity = {version = "0.11.6",  default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
shuttle-runtime = "0.44.0"
shuttle-secrets = "0.42.0"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0.70"
shuttle-serenity = { version = "0.44.0", default-features = false, features = ["serenity-0-11-rustls_backend"] }
tracing = "0.1.37"
