[package]
name = "ticket-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
rand = "0.9.1"
anyhow = "1.0.98"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.41"
regex = "1.11.1"
dotenv = "0.15.0"

[build]
jobs = 1

[profile.release]
codegen-units = 1